--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/inner-page-style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
-    <title>Document</title>
+    <title>Tours and Travels</title>
 </head>
 
 <body>
