Homepage updated and attempted email verification

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,1 +1,42 @@
-<h3>This is about us page</h3>
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block content %}
+
+<center>
+    <h1>About Us</h1> <br>
+</center>
+
+<div class="container">
+    <p style="font-size: medium;">
+        Welcome to Tours and Travels, your ultimate gateway to extraordinary travel experiences! We are a premier travel
+        company specializing in curated packages that take you to mesmerizing tourism destinations worldwide. Our
+        brilliance lies in our attention to detail and dedication to delivering exceptional service. With us, customer
+        satisfaction is paramount, and we prioritize your needs and preferences above all else. <br> <br>
+
+        At Tours and Travels, we understand the significance of creating lasting memories through travel. Our
+        experienced team meticulously designs each package, handpicking the finest destinations and crafting itineraries
+        that cater to all types of travelers. Whether you seek an exhilarating adventure, a relaxing getaway, or an
+        immersive cultural experience, we have the perfect package to suit your desires. We go above and beyond to
+        exceed your expectations, offering flexibility, customization, and unwavering support throughout your journey.
+        <br> <br>
+
+        Efficiency and seamless experiences define our approach. From the moment you choose Tours and Travels as your
+        travel partner, we commit ourselves to provide you with an unforgettable journey. Our extensive network of
+        trusted partners ensures top-notch accommodations, reliable transportation, and engaging activities. We select
+        knowledgeable local guides who offer insider perspectives, enhancing your overall travel experience. As a
+        responsible travel company, we promote sustainable tourism practices and support local communities, contributing
+        to a better world for future generations. <br> <br>
+
+        Whether you're embarking on a solo adventure, planning a family vacation, or organizing a corporate retreat,
+        Tours and Travels is your trusted partner in crafting unforgettable memories. Join us on an extraordinary
+        journey, where excellence meets adventure, and your satisfaction is our priority. Discover the world with us and
+        let us turn your travel dreams into reality! <br>
+    </p>
+</div>
+
+
+
+
+{% endblock content %}
