Login and Registration added using email verification

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,16 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.js"></script>
+    <script type="text/javascript" src="js/all.js"></script>
+    <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.js"></script>
+    <script type="text/javascript" src="js/jquery.flexslider.js"></script>
+    <script type="text/javascript" src="js/jquery.rateyo.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.mmenu.all.js"></script> -->
+    <!-- <script type="text/javascript" src="js/jquery.meanmenu.min.js"></script> -->
+    <script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 
