--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="login-block">
                         <a href="{% url 'login' %}">Login /</a>
-                        <a href="{% url 'registration' %}">Register</a>
+                        <a href="{% url 'register' %}">Register</a>
                     </div>
                 </div>
             </div>
