--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -34,7 +34,7 @@
             <h4 class="card-title mb-4">Sign in</h4>
             {% include 'includes/alerts.html' %}
 
-            <form action="{% url 'loginUser' %}" method="POST">
+            <form action="{% url 'login' %}" method="POST">
 
                 {% csrf_token %}
 
