--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -41,8 +41,8 @@
                         {{form.email}}
                     </div> <!-- form-group end.// -->
                     <div class="form-group col-md-6">
-                        <label>Phone Number</label>
-                        {{form.phone_number}}
+                        <label>Username</label>
+                        {{form.username}}
                     </div> <!-- form-group end.// -->
                 </div> <!-- form-row.// -->
                 <div class="form-row">
@@ -63,7 +63,7 @@
             </form>
         </article><!-- card-body.// -->
     </div> <!-- card .// -->
-    <p class="text-center mt-4">Have an account? <a href="{% url 'loginUser' %}">Log In</a></p>
+    <p class="text-center mt-4">Have an account? <a href="{% url 'login' %}">Log In</a></p>
     <br><br>
     <!-- ============================ COMPONENT REGISTER  END.// ================================= -->
 
