packages app started and footer added

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -33,17 +33,18 @@
                             tours.travel@gmail.com </a>
                     </div>
                     <div class="top-header-block">
-                        <a href="tel:+8801711582105" itemprop="telephone"><i class="fas fa-phone"></i> +8801711582105
+                        <a href="tel:+8801862535859" itemprop="telephone"><i class="fas fa-phone"></i> +8801862535859
                         </a>
                     </div>
                 </div>
                 <div class="top-header-right">
                     <div class="social-block">
                         <ul class="social-list">
+                            <li><a href="https://www.facebook.com/groups/toursortravels/?ref=share"><i
+                                        class="fab fa-facebook-square"></i></a></li>
                             <li><a href=""><i class="fab fa-viber"></i></a></li>
-                            <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
-                            <li><a href=""><i class="fab fa-facebook-square"></i></a></li>
-                            <li><a href=""><i class="fab fa-facebook-messenger"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCpwZfArB-b2mm_no4R96FgQ"><i
+                                        class="fab fa-youtube"></i></a></li>
                             <li><a href=""><i class="fab fa-twitter"></i></a></li>
                             <li><a href=""><i class="fab fa-skype"></i></a></li>
                         </ul>
