Forget Password issue fixed

--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -29,7 +29,7 @@
 
 
                 <div class="form-group">
-                    <a href="{% url 'loginUser' %}" class="float-right">Got Password? Login</a>
+                    <a href="{% url 'login' %}" class="float-right">Got Password? Login</a>
 
                 </div> <!-- form-group form-check .// -->
                 <div class="form-group">
