--- a/templates/accounts/account_verification_email.html
+++ b/templates/accounts/account_verification_email.html
@@ -6,7 +6,7 @@ Hi {{user.first_name}}
 
 Please click on below link to confirm your registration.
 
-http://{{domain}}{% url 'activate' uidb64=uid token=token %}
+http://127.0.0.1:8000{% url 'activate' uidb64=uid token=token %}
 
 If you think it's not you, please ignore this email.
 
