--- a/templates/accounts/reset_password_email.html
+++ b/templates/accounts/reset_password_email.html
@@ -6,7 +6,7 @@ Hi {{user.first_name}}
 
 Please click on below link to reset your password.
 
-http://127.0.0.8000/{% url 'resetpassword_validate' uidb64=uid token=token %}
+http://127.0.0.1:8000{% url 'resetpassword_validate' uidb64=uid token=token %}
 
 If you think it's not you, please ignore this email.
 
