Some Package Modification

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/meanmenu.min.css"> -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/inner-page-style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 
     <title>Tours and Travels</title>
 </head>
