--- a/templates/home.html
+++ b/templates/home.html
@@ -104,17 +104,17 @@
     </a> -->
 </div>
 
-<div class="page-heading">
+<!-- <div class="page-heading">
     <div class="container">
-        <h2>popular courses</h2>
+        <h2>popular Packages</h2>
     </div>
-</div>
+</div> -->
 
 <div class="learn-courses">
     <div class="container">
         <div class="courses">
             <div class="owl-one owl-carousel">
-                <div class="box-wrap" itemprop="event" itemscope itemtype=" http://schema.org/Course">
+                <div class="box-wrap" itemprop="event" itemscope itemtype="">
                     <div class="img-wrap" itemprop="image"><img src="images/course-pic.jpg" alt="courses picture"></div>
                     <a href="#" class="learn-desining-banner" itemprop="name">Learn Web Designing >>></a>
                     <div class="box-body" itemprop="description">
