--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -73,12 +73,7 @@
                     <nav class="nav-desktop">
                         <ul class="menu-list">
                             <li><a href="{% url 'homePage' %}">Home</a></li>
-                            <li class="menu-parent">Packages
-                                <ul class="sub-menu">
-                                    <li><a href="#">All Packages</a></li>
-                                    <li><a href="#">Upcoming Packages</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="{% url 'packages' %}">Packages</a></li>
                             <li><a href="{% url 'about-us' %}">About Us</a></li>
                             <li><a href="{% url 'contact-us' %}">Contact</a></li>
                         </ul>
