--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<section class="query-section">
+<section class="query-section" style="margin-top: 45px;">
     <div class="container">
         <p>Any Queries? Ask us a question at<a href="tel:+8801862535859"><i class="fas fa-phone"></i> +8801862535859</a>
         </p>
